modificaciones en validaciones, en agregar usuario, resposivo en dashboard de agregarU, y botones enlazados

--- a/Inicio_de_Sesion.html
+++ b/Inicio_de_Sesion.html
@@ -25,7 +25,7 @@
             <label>Introduce tu contaseña</label>
         </div>
 
-        <button type="submit" class=".btn.ingresar">Ingresar</button>
+        <button type="submit" class="btn-ingresar">Ingresar</button>
     </div>
 
        </form>
