--- a/admins/DashBoard-admin.html
+++ b/admins/DashBoard-admin.html
@@ -100,7 +100,7 @@
             <div class="contenedor-tabla">
                 <div class="agregar">
                     <i class="fa-solid fa-user "></i>
-                    <button class="btn-icon"  onclick="location.href='/admins/AgregarU.html'" >Agregar usuario nuevo
+                    <button class="btn-icon"  onclick="location.href='/admins/AgregarUsuarios.html'" >Agregar usuario nuevo
                     </button>
                 </div>
 
