--- a/admins/AgregarP.html
+++ b/admins/AgregarP.html
@@ -16,21 +16,19 @@
     <!-- datatables css y js -->
     <link href="//cdn.datatables.net/2.1.8/css/dataTables.dataTables.min.css" rel="stylesheet">
     <script src="//cdn.datatables.net/2.1.8/js/dataTables.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/adminsCSS/AgregarP.css">
+    <!-- BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>TechCraft Dynamics</title>
 
 </head>
 <body>
     <div class="contenedor-dashboard">
-
         <aside class="barra-lateral">
-           
                 <div class="admin">
                     <img src="/img/icon-admin.webp" alt="" width="80" height="80">
                     <h2>Administrador</h2>
                 </div>
-
 
             
            <!-- Menú de navegación -->
